--- a/angular10/src/app/app.component.html
+++ b/angular10/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
-    <h3 class="d-flex justify-content-center">Angular 10, Web API, SQL Server App Demo </h3>
-    <h5 class="d-flex justify-content-center">Employee Management Portal</h5>
+    <h3 class="d-flex justify-content-center">Akash kumar project</h3>
+    <h5 class="d-flex justify-content-center">Employee Management App</h5>
 
     <nav class="navbar navbar-expand-sm bg-light navbar-dark">
     <ul class="navbar-nav">
