--- a/angular10/src/app/department/show-dep/show-dep.component.html
+++ b/angular10/src/app/department/show-dep/show-dep.component.html
@@ -1,12 +1,12 @@
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary float-right m-2" 
+<!-- <button type="button" class="btn btn-primary float-right m-2" 
 data-toggle="modal" data-target="#exampleModal"
 (click)="addClick()"
 data-backdrop="static" data-keyboard="false"
 >
     Add Department
-  </button>
+  </button> -->
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
