--- a/angular10/src/app/employee/add-edit-emp/add-edit-emp.component.html
+++ b/angular10/src/app/employee/add-edit-emp/add-edit-emp.component.html
@@ -8,7 +8,7 @@
         placeholder="Enter Employee Name">
     </div>
 
-    <!-- <label class="col-sm-2 col-form-label">Department</label>
+    <label class="col-sm-2 col-form-label">Department</label>
     <div class="col-sm-10">
        <select class="form-control" [(ngModel)]="Department">
            <option>--Select--</option>
@@ -16,18 +16,18 @@
                {{depName.DepartmentName}}
            </option>
        </select>
-    </div> -->
+    </div>
 
     <label class="col-sm-2 col-form-label">Date of joining</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10 mt-2">
         <input type="date"  [(ngModel)]="DateOfJoining">
     </div>
 
 </div>
-<div class="ml-3 bd-highlight" style="width: 40%;">
+<!-- <div class="ml-3 bd-highlight" style="width: 40%;">
 <img [src]=PhotoFilePath height="250px;" width="200px;">
 <input type="file" (change)="uploadPhoto($event)" class="mt-2"/>
-</div>
+</div> -->
 </div>
 
 
