--- a/angular10/src/app/employee/show-emp/show-emp.component.html
+++ b/angular10/src/app/employee/show-emp/show-emp.component.html
@@ -4,16 +4,16 @@
     <div class="row">
       <div class="col-sm-8 col-lg-6">
         <select class="form-control" [(ngModel)]="Department">
-          <option class="btn-primary"><button type="button" class="btn  float-right m-2" 
+          <option *ngFor="let depName of DepartmentsList" >
+            {{depName.DepartmentName}}
+          </option>
+          <option><button type="button" class="btn btn-primary float-right m-2" 
             data-toggle="modal" data-target="#exampleModal"
             (click)="addClick()"
             data-backdrop="static" data-keyboard="false"
             >
                 Add Department
               </button></option>
-          <option *ngFor="let depName of DepartmentsList">
-            {{depName.DepartmentName}}
-          </option>
         </select>
       </div>
       <div class="col-sm-8 col-lg-6">
