--- a/angular10/src/app/employee/add-edit-emp/add-edit-emp.component.html
+++ b/angular10/src/app/employee/add-edit-emp/add-edit-emp.component.html
@@ -1,15 +1,12 @@
 <div class="d-flex flex-row bd-highlight mb-3">
-
-<div class="form-froup row" style="width: 60%;">
-
+<div class="form-group row " style="width: 60%;">
     <label class="col-sm-2 col-form-label">Employee Name</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10 ">
         <input type="text" class="form-control" [(ngModel)]="EmployeeName"
         placeholder="Enter Employee Name">
     </div>
-
     <label class="col-sm-2 col-form-label">Department</label>
-    <div class="col-sm-10">
+    <div class="col-sm-10 mt-2">
        <select class="form-control" [(ngModel)]="Department">
            
            <option *ngFor="let depName of DepartmentsList">
@@ -22,12 +19,15 @@
     <div class="col-sm-10 mt-2">
         <input type="date"  [(ngModel)]="DateOfJoining">
     </div>
+    <br>
+
+    <label class="col-sm-2 col-form-label">EmailId</label>
+    <div class="col-sm-10 mt-2">
+        <input type="text" class="form-control" [(ngModel)]="EmailId"
+        placeholder="EmailId">
+    </div>
 
 </div>
-<!-- <div class="ml-3 bd-highlight" style="width: 40%;">
-<img [src]=PhotoFilePath height="250px;" width="200px;">
-<input type="file" (change)="uploadPhoto($event)" class="mt-2"/>
-</div> -->
 </div>
 
 
