--- a/angular10/src/app/employee/employee.component.html
+++ b/angular10/src/app/employee/employee.component.html
@@ -1,1 +1,14 @@
-<app-show-emp></app-show-emp>
+<div class="container">
+    <h3 class="d-flex justify-content-center">Akash kumar project</h3>
+    <h5 class="d-flex justify-content-center">Employee Management App</h5>
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <button routerLink="employee"
+            class="m-1 btn btn-dark " Button>Employees</button>
+        </li>
+    </ul>
+    </nav>
+    <app-show-emp></app-show-emp>
+</div>
