--- a/angular10/src/app/app.component.html
+++ b/angular10/src/app/app.component.html
@@ -1,4 +1,7 @@
-
-
+<div class="container">
+<h3 class="d-flex justify-content-center">Akash kumar {{title}} project</h3>
+<h5 class="d-flex justify-content-center">Employee Management App</h5>
+<!-- <nav class="navbar navbar-expand-sm bg-light navbar-dark"></nav> -->
+</div>
 <router-outlet></router-outlet>
 
